# adnator

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
src/: coalescence.py  coalescent_simulation.py  io.py  makefile  read_simulation.cpp  read_simulation.py  simulation.py
src/adnator/: coalescent_simulation.py  io.py  makefile  read_simulation.cpp  read_simulation.py  simulation.py
utilities/: ancestral_sequence.fasta  example_3p_misincorporations.txt  example_5p_misincorporations.txt  example_config.yaml  example_demography.yaml  example_fragmentation_distribution.txt  example_script.py
