[build-system]
requires = [
    "setuptools>=61.0",
    "attrs>=23.2.0",
    "demes>=0.2.3",
    "jsonschema>=4.22.0",
    "jsonschema-specifications>=2023.12.1",
    "msprime>=1.3.1",
    "newick>=1.9.0",
    "numpy>=1.26.4",
    "PyYAML>=6.0.1",
    "referencing>=0.35.1",
    "rpds-py>=0.18.1",
    "ruamel.yaml>=0.18.6",
    "ruamel.yaml.clib>=0.2.8",
    "svgwrite>=1.4.3",
    "tskit>=0.5.6"
]
build-backend = "setuptools.build_meta"

[project]
name = "adnator"
version = "1.0"
authors = [
  {name="Jazeps Medina Tretmanis", email="jaz.medtre@gmail.com"}
]
description = "A realistic-ish aDNA simulator"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/Jazpy/adnator"
Issues = "https://github.com/Jazpy/adnator/issues"
